tests/pass/run/ownership_closure_capture_copy_parity/main.kira
function makePrinter(base: Int): () -> Void {
    return { in
        print(base + 2)
    }
}

@Main
function main() {
    let printer = makePrinter(5)
    printer()
    return
}
