tests/fail/semantics/callback_capture_not_supported/main.kira
@Main
function main() {
    let offset: Int = 1
    let printer: (Int) -> Void = { value in
        print(value + offset)
    }
    printer(1)
    return
}
